...
        )


        NavigationBarItem(
            selected = false,
            onClick = { navController.navigate("prizes") },
            label = { Text("Premios") },
            icon = { Icon(imageVector = Icons.Filled.EmojiEvents, contentDescription = null, tint = Color.Black)
            },
            modifier = Modifier.testTag("bottom_nav_awards")
        )
    }
}
