...
                icon = {
                    Icon(Icons.Default.Add, contentDescription = null, tint = Color.White)
                },
                text = {
                    Text("Añadir Premio", color = Color.White)
                },
                modifier = Modifier.testTag("bottom_add_prizes")
            )
        }
    ) { padding ->
        Box(
            modifier = Modifier
                .fillMaxSize()
...
